--- a/lesson21/hw4/index.html
+++ b/lesson21/hw4/index.html
@@ -8,6 +8,6 @@
 
   <body>
     <h1 class="title">I am <i>Front-End</i> developer</h1>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
